--- a/views/MyForm.hbs
+++ b/views/MyForm.hbs
@@ -1,33 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-    <!-- Базовые метаинформации -->
-    <meta charset="UTF-8">
-    <title>Федотенко Николай M33122</title>
-    <meta name="description" content="Сайт-резюме Федотенко Николая Владимировича">
-    <meta name="keywords" content="резюме,портфолио,ИТМО">
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/outlines.css">
-    <link rel="stylesheet" href="css/Form.css">
-    <!-- Javascript -->
-    <script src="JS/NavBar.js"></script>
-    <script src="JS/FormLoader.js"></script>
+  {{> head }}
+  <link rel="stylesheet" href="css/Form.css">
+  <script src="JS/FormLoader.js"></script>
 </head>
 <body>
 <div class="card">
     <!-- Header -->
     <header>
-        <div class="title">
-            <h1>Николай Федотенко</h1>
-        </div>
-        <div class="nav-bar">
-            <nav>
-                <a href="index.html"><span id="SD" class="link">Разработчик C++</span></a>
-                <a href="RendererEngineer.html"><span id="RE" class="link">Рендер инженер</span></a>
-                <a href="./MyForm.html"><span class="link">TODO List</span></a>
-            </nav>
-        </div>
+      {{> header }}
     </header>
+
+  <main>
+
     <div class="form-block" id="form">
         <span class="form-title"><h2>Список заданий на неделю</h2></span>
 
@@ -38,11 +24,9 @@
             <div class="form-item">
                 <label>Максимальное число заданий
                     <select name="tasks-number">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
+                        {{#times 5}}
+                            <option value={{ this }}>{{ this }}</option>
+                        {{/times}}
                     </select>
                 </label>
             </div>
@@ -80,7 +64,13 @@
             </div>
         </template>
     </div>
-    <div id="time"></div>
+
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    {{> footer }}
+  </footer>
 </div>
 </body>
 </html>
