[Lab7] Add initial files

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -7,5 +7,6 @@
     <a href="/"><span class="link">Разработчик C++</span></a>
     <a href="/RenderEngineer"><span class="link">Рендер инженер</span></a>
     <a href="/MyForm"><span class="link">TODO List</span></a>
+    <a href="/chat"><span class="link">Чат</span></a>
   </nav>
 </div>
